correction alignements titres d'encarts en version pc

--- a/css/style.css
+++ b/css/style.css
@@ -486,6 +486,12 @@ header nav ul li a:hover {
     gap: 5rem;
   }
 }
+.index-main .martial_arts-section div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 1rem;
+}
 @media screen and (max-width: 900px) {
   .index-main .martial_arts-section div {
     display: flex;
